# SensitiBot

./: .gitignore  invocame.py  pyproject.toml  readme.md  requirements.txt  sensitiBot.py  testAPI.py  testAPIGraphQL.py
cleaner/: access_cleaner.py  cleaner.py  csv_cleaner.py  excel_cleaner.py  json_cleaner.py  show_matches.py  tsv_cleaner.py
github/: github.py
local/: local.py
reader/: access_reader.py  columns_reader.py  csv_reader.py  excel_reader.py  headers_reader.py  json_reader.py  reader.py  tsv_reader.py
renderer/: html_template.html  renderer.py
sensitibot/: custom_formatters.py  github.py  help_formatter.py  parser.py  sensitibot.py
tests/: test_cleaner.py  test_github.py  test_local.py  test_parser.py  test_reader.py
tests/test_files/clean/: clean.csv
