[tool.poetry]
name = "SensitiBot"
version = "0.4.0"
description = "My awesome Hello CLI application"
readme = "README.md"
authors = ["José Manuel Martín Luque <martinluquejm@gmail.com>"]
packages = [
    { include = "sensitibot" },
    { include = "local" },
    { include = "github" },
    { include = "reader" },
    { include = "renderer" },
    { include = "cleaner" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "==2.28.2"
python-dotenv = "==1.0.0"
pandas = "==1.5.3"
tqdm = "==4.62.3"
Jinja2 = "==3.1.2"
openpyxl = "==3.1.2"
XlsxWriter = "==3.1.0"
pyodbc = "==4.0.39"
SQLAlchemy = "==2.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sensitibot = "sensitibot.sensitibot:main"

[tool.poetry.urls]
homepage = "https://github.com/TFG-SensitiBot/SensitiBot"
repository = "https://github.com/TFG-SensitiBot/SensitiBot"
