[tool.poetry]
name = "SensitiBot"
version = "0.4.3"
description = "My awesome Hello CLI application"
readme = "README.md"
authors = ["José Manuel Martín Luque <josemanuelmartinluque@outlook.com>"]
packages = [
    { include = "sensitibot" },
    { include = "local" },
    { include = "github" },
    { include = "reader" },
    { include = "renderer" },
    { include = "cleaner" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
tqdm = "^4.62.3"
openpyxl = "^3.1.2"
XlsxWriter = "^3.1.0"
sqlalchemy-access = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sensitibot = "sensitibot.sensitibot:main"

[tool.poetry.urls]
homepage = "https://pypi.org/project/sensitibot/"
repository = "https://github.com/TFG-SensitiBot/SensitiBot"
